feat: harden auth and messaging reliability